Fixes padding between cards on smaller screens

--- a/static/output.css
+++ b/static/output.css
@@ -1998,6 +1998,10 @@ video {
   padding-top: 2.5rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2793,6 +2797,11 @@ em {
   .md\:my-4 {
     margin-top: 1rem;
     margin-bottom: 1rem;
+  }
+
+  .md\:my-6 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   .md\:mt-8 {
